# trc25-it-tests

test2_ros2_sensor/: .gitignore  README.md
test2_ros2_sensor/sensor_data_evaluation/: CMakeLists.txt  package.xml  setup.cfg  setup.py
test2_ros2_sensor/sensor_data_evaluation/launch/: sensor_launch.py
test2_ros2_sensor/sensor_data_evaluation/msg/: SensorData.msg
test2_ros2_sensor/sensor_data_evaluation/scripts/: publisher_node.py  subscriber_node.py
